# oxd_extern_libs

./: .gitignore
include/MediaInfo/: MediaInfo_Const.h
include/boost/beast/http/: fields.hpp
include/codec/: tools.hpp
include/openssl/: configuration.h
include/simple/: errc.hpp  fmt.hpp  http.hpp  json.hpp  log.hpp  time.hpp
include/websvc/: base.h  http_server.h  server.h  websocket_server.h
include/websvc/simple-web-server/: new_server_https.hpp  server_wss.hpp
include/websvc/sws/: server_https.hpp
libs/: readme.txt
tests/: CMakeLists.txt  http.cpp
xlang/webserver/: go.mod  websvr.go
xlang/xgo/: go.mod
xlang/xgo/cmd/: main.go
xlang/xgo/net/: abi.h  utils.go  webserver.go
